Changed file name to clearer one.

--- a/modules/common-workflows/nav-common-workflows-guide.adoc
+++ b/modules/common-workflows/nav-common-workflows-guide.adoc
@@ -6,16 +6,14 @@ include::./branding/pdf/entities.adoc[]
 :doctype: book
 endif::[]
 
-
 * xref:common-workflows-overview.adoc[Common Workflows]
+** xref:workflow-client-onboarding.adoc[Client onboarding]
 ** xref:workflow-configuration-management.adoc[Configuration Management]
 ** xref:workflow-content-lifecycle-management.adoc[Content Lifecycle Management]
 
 ifeval::[{suma-content} == true]
 ** xref:workflow-inplace-sles-upgrade.adoc[In-place Upgrade]
 endif::[]
-
-** xref:workflow-onboarding.adoc[Onboarding]
 
 ifeval::[{suma-content} == true]
 ** xref:workflow-removing-channel.adoc[Removing channel]
