monitored sle micro systems only have Node and Blackbox exporter https://github.com/SUSE/spacewalk/issues/21743

--- a/modules/administration/pages/monitoring.adoc
+++ b/modules/administration/pages/monitoring.adoc
@@ -440,6 +440,11 @@ These exporters can be installed on managed systems:
 * Apache exporter: [systemitem]``golang-github-lusitaniae-apache_exporter``.
     See https://github.com/Lusitaniae/apache_exporter.
 
+[NOTE]
+====
+On {micro}, only the Node exporter and the Blackbox exporter are available.
+====
+
 When you have the exporters installed and configured, you can start using Prometheus to collect metrics from monitored systems.
 If you have configured your monitoring server with the {webui}, metrics collection happens automatically.
 
