--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -225,7 +225,7 @@ Policies can be to reboot instantly or during a maintenance window.
 For more information, see the [command]``rebootmgrd``(8) man page.
 Otherwise if [command]``rebootmgrd`` is not running, {productname} will call [command]``systemctl reboot``.
 
-[[NOTE]]
+[NOTE]
 ====
 Using any method different from [command]``systemd`` may cause undesired behavior.
 ====
