Ansible nitpicks and more #1213077 keichwa (#2355)
* ansible dir is /etc/ansible

https://bugzilla.suse.com/show_bug.cgi?id=1213077
https://github.com/SUSE/spacewalk/issues/21971

* address 6 and 7 of the bug
* document ansible_private_key file setting (per feedback)

* Update modules/administration/pages/ansible-setup-control-node.adoc
Co-authored-by: Ornela Marić <omaric@suse.com>

--- a/modules/administration/pages/ansible-setup-control-node.adoc
+++ b/modules/administration/pages/ansible-setup-control-node.adoc
@@ -73,7 +73,7 @@ Therefore, you should create one inventory file for each distinct OS listed in _
 
 .Procedure: Creating the Ansible inventory files
 . Create and add your hosts to an inventory file to be managed by Ansible.
-  The default path for an Ansible inventory is `etc/ansible/hosts`.
+  The default path for an Ansible inventory is [path]``/etc/ansible/hosts``.
 +
 
 .Inventory Example
@@ -93,10 +93,30 @@ client243.mgr.example.org
 [all:vars]
 ansible_ssh_private_key_file=/etc/ansible/my_ansible_private_key
 ----
+
+
+
+. In the {productname} {webui}, from the Ansible control menu navigate to menu:Ansible[Control Node] to add inventory files to the control node.
+
+. Under the [literal]``Playbook Directories`` section add [literal]``/usr/share/scap-security-guide/ansible`` to the [literal]``Add a Playbook Directories`` field and click btn:[Save].
+
+. Under [literal]``Inventory Files`` add your inventory file locations to the [literal]``Add an Inventory file`` field and click btn:[Save].
++
+.Examples
+----
+/etc/ansible/sles15
+/etc/ansible/sles12
+/etc/ansible/centos7
+----
 +
 
 For additional playbook examples, see https://github.com/ansible/ansible-examples.
 
+
+
+== Establish communication with the Ansible nodes
+
+.Procedure: Establishing communication with the Ansible nodes
 . Create the SSH keys that you are using in your inventory.
 +
 
@@ -111,6 +131,16 @@ ssh-keygen -f /etc/ansible/my_ansible_private_key
 ssh-copy-id -i /etc/ansible/my_ansible_private_key root@client240.mgr.example.org
 ----
 
+. Declare the private key in [path]``/etc/ansible/ansible.cfg`` as follows:
++
+
+----
+private_key_file = /etc/ansible/my_ansible_private_key
+----
++
+
+Replace [path]``my_ansible_private_key`` with the name of the file containing the private key.
+
 . Test that Ansible is working by executing the following commands from the control node:
 +
 
@@ -120,23 +150,12 @@ ansible mygroup1 -m ping
 ansible client240.mgr.example.org -m ping
 ----
 
+You may now run remediations.
 
-
-== Add inventory files to the Ansible control node
-
-.Procedure: Adding Ansible inventory files to the control node
-. From the ansible control menu select: menu:Ansible[Control Node].
-
-. Under the [literal]``Playbook Directories`` section add `/usr/share/scap-security-guide/ansible` to the [literal]		Add a Playbook Directories`` field and then click btn:[Save].
-
-. Under [literal]``Inventory Files`` add your inventory file locations to the [literal]``Add an Inventory file`` field and click btn:[Save].
-+
-.Examples
-----
-/etc/ansible/sles15
-/etc/ansible/sles12
-/etc/ansible/centos7
-----
-
-You may now run remediations
 For more information, see xref:ansible-compliance-as-code.adoc[].
+
+
+// bsc#1213077 #9
+// section on how to create playbooks, and how to schedule their execution.
+// Add a description of the "Playbooks" tab, in general context.
+// There is a very summarized descriptions in next section "Compliance as code", but we // need a description of the playbooks tab that is independent of usage with openscap.
