--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -139,7 +139,7 @@ Further diagnostics about the status of the instance needs to be done on the clo
 
 [IMPORTANT]
 ====
-Any of the following actions or changes in the {payg} instance will lead to credentials stopping to work:
+Any of the following actions or changes in the {payg} instance will lead to credentials failing:
 * removing zypper credentials files
 * removing the imported certificates
 * removing cloud-specific entries from [path]``/etc/hosts``
