--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -28,6 +28,7 @@ include::snippets/arch-other-note.adoc[]
 
 The products you need for this procedure are:
 
+//start with the NEWEST version on top
 [[slemicro-channels-wizard]]
 [cols="1,1", options="header"]
 .SLE Micro Products - WebUI
@@ -35,33 +36,6 @@ The products you need for this procedure are:
 
 | OS Version
 | Product Name
-
-| {micro} 5.1 {x86_64}
-| SUSE Linux Enterprise Micro 5.1 x86_64
-
-| {micro} 5.1 {arm64}
-| SUSE Linux Enterprise Micro 5.1 aarch64
-
-| {micro} 5.1 {s390x}
-| SUSE Linux Enterprise Micro 5.1 s390x
-
-| {micro} 5.2 {x86_64}
-| SUSE Linux Enterprise Micro 5.2 x86_64
-
-| {micro} 5.2 {arm64}
-| SUSE Linux Enterprise Micro 5.2 aarch64
-
-| {micro} 5.2 {s390x}
-| SUSE Linux Enterprise Micro 5.2 s390x
-
-| {micro} 5.3 {x86_64}
-| SUSE Linux Enterprise Micro 5.3 x86_64
-
-| {micro} 5.3 {arm64}
-| SUSE Linux Enterprise Micro 5.3 aarch64
-
-| {micro} 5.3 {s390x}
-| SUSE Linux Enterprise Micro 5.3 s390x
 
 | {micro} 5.4 {x86_64}
 | SUSE Linux Enterprise Micro 5.4 x86_64
@@ -72,6 +46,33 @@ The products you need for this procedure are:
 | {micro} 5.4 {s390x}
 | SUSE Linux Enterprise Micro 5.4 s390x
 
+| {micro} 5.3 {x86_64}
+| SUSE Linux Enterprise Micro 5.3 x86_64
+
+| {micro} 5.3 {arm64}
+| SUSE Linux Enterprise Micro 5.3 aarch64
+
+| {micro} 5.3 {s390x}
+| SUSE Linux Enterprise Micro 5.3 s390x
+
+| {micro} 5.2 {x86_64}
+| SUSE Linux Enterprise Micro 5.2 x86_64
+
+| {micro} 5.2 {arm64}
+| SUSE Linux Enterprise Micro 5.2 aarch64
+
+| {micro} 5.2 {s390x}
+| SUSE Linux Enterprise Micro 5.2 s390x
+
+| {micro} 5.1 {x86_64}
+| SUSE Linux Enterprise Micro 5.1 x86_64
+
+| {micro} 5.1 {arm64}
+| SUSE Linux Enterprise Micro 5.1 aarch64
+
+| {micro} 5.1 {s390x}
+| SUSE Linux Enterprise Micro 5.1 s390x
+
 |===
 
 include::snippets/addchannels_vendor_webui.adoc[]
@@ -81,6 +82,7 @@ include::snippets/addchannels_vendor_webui.adoc[]
 Alternatively, you can add channels at the command prompt.
 The channels you need for this procedure are:
 
+//start with the NEWEST version on top
 [[slemicro-channels-cli]]
 [cols="1,1,1", options="header"]
 .SLE Micro Products - CLI
@@ -90,29 +92,17 @@ The channels you need for this procedure are:
 | Base Channel
 | Updates Channel
 
-| {micro} 5.1 {x86_64}
-| suse-microos-5.1-pool-x86_64
-| suse-microos-5.1-updates-x86_64
+| {micro} 5.4 {x86_64}
+| sle-micro-5.4-pool-x86_64
+| sle-micro-5.4-updates-x86_64
 
-| {micro} 5.1 {arm64}
-| suse-microos-5.1-pool-aarch64
-| suse-microos-5.1-updates-aarch64
+| {micro} 5.4 {arm64}
+| sle-micro-5.4-pool-arm64
+| sle-micro-5.4-updates-arm64
 
-| {micro} 5.1 {zsystems} ({s390x})
-| suse-microos-5.1-pool-s390x
-| suse-microos-5.1-updates-s390x
-
-| {micro} 5.2 {x86_64}
-| suse-microos-5.2-pool-x86_64
-| suse-microos-5.2-updates-x86_64
-
-| {micro} 5.2 {arm64}
-| suse-microos-5.2-pool-aarch64
-| suse-microos-5.2-updates-aarch64
-
-| {micro} 5.2 {zsystems} ({s390x})
-| suse-microos-5.2-pool-s390x
-| suse-microos-5.2-updates-s390x
+| {micro} 5.4 {zsystems} ({s390x})
+| sle-micro-5.4-pool-s390x
+| sle-micro-5.4-updates-s390x
 
 | {micro} 5.3 {x86_64}
 | sle-micro-5.3-pool-x86_64
@@ -126,17 +116,29 @@ The channels you need for this procedure are:
 | sle-micro-5.3-pool-s390x
 | sle-micro-5.3-updates-s390x
 
-| {micro} 5.4 {x86_64}
-| sle-micro-5.4-pool-x86_64
-| sle-micro-5.4-updates-x86_64
+| {micro} 5.2 {x86_64}
+| suse-microos-5.2-pool-x86_64
+| suse-microos-5.2-updates-x86_64
 
-| {micro} 5.4 {arm64}
-| sle-micro-5.4-pool-arm64
-| sle-micro-5.4-updates-arm64
+| {micro} 5.2 {arm64}
+| suse-microos-5.2-pool-aarch64
+| suse-microos-5.2-updates-aarch64
 
-| {micro} 5.4 {zsystems} ({s390x})
-| sle-micro-5.4-pool-s390x
-| sle-micro-5.4-updates-s390x
+| {micro} 5.2 {zsystems} ({s390x})
+| suse-microos-5.2-pool-s390x
+| suse-microos-5.2-updates-s390x
+
+| {micro} 5.1 {x86_64}
+| suse-microos-5.1-pool-x86_64
+| suse-microos-5.1-updates-x86_64
+
+| {micro} 5.1 {arm64}
+| suse-microos-5.1-pool-aarch64
+| suse-microos-5.1-updates-aarch64
+
+| {micro} 5.1 {zsystems} ({s390x})
+| suse-microos-5.1-pool-s390x
+| suse-microos-5.1-updates-s390x
 
 |===
 
@@ -154,14 +156,18 @@ To add the client tools, add these channels from the command prompt:
 | OS Version
 | Client Channel
 
-| {micro} 5.1
-| suse-microos-5.1-uyuni-client
+
+| {micro} 5.4
+| sle-micro-5.4-uyuni-client
+
+| {micro} 5.3
+| suse-microos-5.3-uyuni-client
 
 | {micro} 5.2
 | suse-microos-5.2-uyuni-client
 
-| {micro} 5.3
-| sle-micro-5.3-uyuni-client
+| {micro} 5.1
+| sle-micro-5.1-uyuni-client
 
 |===
 
@@ -225,7 +231,7 @@ Policies can be to reboot instantly or during a maintenance window.
 For more information, see the [command]``rebootmgrd``(8) man page.
 Otherwise if [command]``rebootmgrd`` is not running, {productname} will call [command]``systemctl reboot``.
 
-[[NOTE]]
+[NOTE]
 ====
 Using any method different from [command]``systemd`` may cause undesired behavior.
 ====
