--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -90,29 +90,17 @@ The channels you need for this procedure are:
 | Base Channel
 | Updates Channel
 
-| {micro} 5.1 {x86_64}
-| suse-microos-5.1-pool-x86_64
-| suse-microos-5.1-updates-x86_64
+| {micro} 5.4 {x86_64}
+| sle-micro-5.4-pool-x86_64
+| sle-micro-5.4-updates-x86_64
 
-| {micro} 5.1 {arm64}
-| suse-microos-5.1-pool-aarch64
-| suse-microos-5.1-updates-aarch64
+| {micro} 5.4 {arm64}
+| sle-micro-5.4-pool-arm64
+| sle-micro-5.4-updates-arm64
 
-| {micro} 5.1 {zsystems} ({s390x})
-| suse-microos-5.1-pool-s390x
-| suse-microos-5.1-updates-s390x
-
-| {micro} 5.2 {x86_64}
-| suse-microos-5.2-pool-x86_64
-| suse-microos-5.2-updates-x86_64
-
-| {micro} 5.2 {arm64}
-| suse-microos-5.2-pool-aarch64
-| suse-microos-5.2-updates-aarch64
-
-| {micro} 5.2 {zsystems} ({s390x})
-| suse-microos-5.2-pool-s390x
-| suse-microos-5.2-updates-s390x
+| {micro} 5.4 {zsystems} ({s390x})
+| sle-micro-5.4-pool-s390x
+| sle-micro-5.4-updates-s390x
 
 | {micro} 5.3 {x86_64}
 | sle-micro-5.3-pool-x86_64
@@ -126,17 +114,29 @@ The channels you need for this procedure are:
 | sle-micro-5.3-pool-s390x
 | sle-micro-5.3-updates-s390x
 
-| {micro} 5.4 {x86_64}
-| sle-micro-5.4-pool-x86_64
-| sle-micro-5.4-updates-x86_64
+| {micro} 5.2 {x86_64}
+| suse-microos-5.2-pool-x86_64
+| suse-microos-5.2-updates-x86_64
 
-| {micro} 5.4 {arm64}
-| sle-micro-5.4-pool-arm64
-| sle-micro-5.4-updates-arm64
+| {micro} 5.2 {arm64}
+| suse-microos-5.2-pool-aarch64
+| suse-microos-5.2-updates-aarch64
 
-| {micro} 5.4 {zsystems} ({s390x})
-| sle-micro-5.4-pool-s390x
-| sle-micro-5.4-updates-s390x
+| {micro} 5.2 {zsystems} ({s390x})
+| suse-microos-5.2-pool-s390x
+| suse-microos-5.2-updates-s390x
+
+| {micro} 5.1 {x86_64}
+| suse-microos-5.1-pool-x86_64
+| suse-microos-5.1-updates-x86_64
+
+| {micro} 5.1 {arm64}
+| suse-microos-5.1-pool-aarch64
+| suse-microos-5.1-updates-aarch64
+
+| {micro} 5.1 {zsystems} ({s390x})
+| suse-microos-5.1-pool-s390x
+| suse-microos-5.1-updates-s390x
 
 |===
 
@@ -225,7 +225,7 @@ Policies can be to reboot instantly or during a maintenance window.
 For more information, see the [command]``rebootmgrd``(8) man page.
 Otherwise if [command]``rebootmgrd`` is not running, {productname} will call [command]``systemctl reboot``.
 
-[[NOTE]]
+[NOTE]
 ====
 Using any method different from [command]``systemd`` may cause undesired behavior.
 ====
