--- a/modules/administration/pages/ssl-certs-imported.adoc
+++ b/modules/administration/pages/ssl-certs-imported.adoc
@@ -117,14 +117,8 @@ systemctl restart postgresql.service
 spacewalk-service start
 ----
 
-. Update the database with the new CA:
-+
-----
-/usr/bin/rhn-ssl-dbstore --ca-cert=<Path_to_Root_CA_Certificate>
-----
-
 If you are using a proxy, you need to generate a server certificate RPM for each proxy, using their host names and cnames.
-You should use `mgr-ssl-cert-setup` also on a {productname} Proxy to replace the certificates.
+You should use [command]``mgr-ssl-cert-setup`` also on a {productname} Proxy to replace the certificates.
 Because the {productname} Proxy does not have a postgreSQL database, only [command]``spacewalk-service restart`` is sufficient.
 
 If the Root CA was changed, it needs to get deployed to all the clients connected to {productname}.
