--- a/modules/retail/pages/saltboot-redeployment.adoc
+++ b/modules/retail/pages/saltboot-redeployment.adoc
@@ -16,7 +16,8 @@ Repartitioning of a terminal removes all data stored on the terminal hard disk, 
 
 == Force saltboot redeployment using salt grains
 
-Saltboot redeployment grains have no side effects and does not require any further configuration. Limitation is that terminal must be accessible by [systeminfo]``salt``.
+Saltboot redeployment grains have no side effects and does not require any further configuration.
+Limitation is that terminal must be accessible by [systeminfo]``salt``.
 
 .Procedure: Forcing a Saltboot to Redeploy Image
 . On the {productname} Server, at the command prompt, as root, apply this Salt state:
