--- a/modules/retail/pages/saltboot-redeployment.adoc
+++ b/modules/retail/pages/saltboot-redeployment.adoc
@@ -40,7 +40,8 @@ salt $terminal_minion_id state.apply saltboot.force_repartition
 
 Saltboot custom values removes the limitation on terminal being reachable by [systemitem]``salt``, however there are configuration steps.
 
-Custom Info keys and values can be also managed using API or [systemitem]``spacecmd`` command. For more information see xref:reference:spacecmd/custominfo.adoc[].
+Custom Info keys and values can be also managed using API or [systemitem]``spacecmd`` command.
+For more information, see xref:reference:spacecmd/custominfo.adoc[].
 
 .Procedure: Create custom info key for image redeployment
 . Navigate to menu::Systems[Custom System Info] page
