--- a/modules/retail/pages/saltboot-redeployment.adoc
+++ b/modules/retail/pages/saltboot-redeployment.adoc
@@ -44,7 +44,7 @@ Custom Info keys and values can be also managed using API or [systemitem]``space
 For more information, see xref:reference:spacecmd/custominfo.adoc[].
 
 .Procedure: Create custom info key for image redeployment
-. Navigate to menu::Systems[Custom System Info] page
+. In the {productname} {webui}, navigate to menu:Systems[Custom System Info].
 . Click [guimenu]``Create Key`` to create new [systemitem]``Custom Info Key``
 . As [guimenu]``Key Label`` fill in [systemitem]``saltboot_force_redeploy``
 . As [guimenu]``Description`` fill in `Force redeploy saltboot image`
