--- a/modules/retail/pages/saltboot-redeployment.adoc
+++ b/modules/retail/pages/saltboot-redeployment.adoc
@@ -45,10 +45,10 @@ For more information, see xref:reference:spacecmd/custominfo.adoc[].
 
 .Procedure: Create custom info key for image redeployment
 . In the {productname} {webui}, navigate to menu:Systems[Custom System Info].
-. Click [guimenu]``Create Key`` to create new [systemitem]``Custom Info Key``
-. As [guimenu]``Key Label`` fill in [systemitem]``saltboot_force_redeploy``
-. As [guimenu]``Description`` fill in `Force redeploy saltboot image`
-. Click [guimenu]``Create Key``
+. Click [guimenu]``Create Key`` to create new [systemitem]``Custom Info Key``.
+. As [guimenu]``Key Label`` fill in [systemitem]``saltboot_force_redeploy``.
+. As [guimenu]``Description`` fill in [systemitem]``Force redeploy saltboot image``.
+. Click [guimenu]``Create Key``.
 
 [INFO]
 ====
