--- a/modules/retail/pages/saltboot-redeployment.adoc
+++ b/modules/retail/pages/saltboot-redeployment.adoc
@@ -50,9 +50,10 @@ For more information, see xref:reference:spacecmd/custominfo.adoc[].
 . As [guimenu]``Description`` fill in [systemitem]``Force redeploy saltboot image``.
 . Click [guimenu]``Create Key``.
 
-[INFO]
+[NOTE]
 ====
-Creating [systemitem]``saltboot_force_redeploy`` custom key is one time operation. Once created, it is available for repeated use.
+Creating [systemitem]``saltboot_force_redeploy`` custom key is a one time operation.
+When created, it is available for repeated use.
 ====
 
 .Procedure: Assign custom value for image redeployment
