--- a/modules/retail/pages/saltboot-redeployment.adoc
+++ b/modules/retail/pages/saltboot-redeployment.adoc
@@ -91,9 +91,10 @@ Saltboot redeployment formula data has a significant side effect in terms of usi
 
 [WARNING]
 ====
-Usually saltboot formula is assigned to the hardware type group and data visible on system level are inherited from this group. Saving group formula on system level will cause data from group to be copied to the system.
+Usually saltboot formula is assigned to the hardware type group and data visible on system level are inherited from this group.
+Saving group formula on system level will cause data from group to be copied to the system.
 
-This has a side effect that changes on group level, like hardware type group formula, will not be visible on system level unless system level formula is unassigned from the system.
+This has the side effect that changes on group level, like hardware type group formula, will not be visible on system level unless system level formula is unassigned from the system.
 ====
 
 [INFO]
