--- a/modules/retail/pages/saltboot-redeployment.adoc
+++ b/modules/retail/pages/saltboot-redeployment.adoc
@@ -103,10 +103,10 @@ After terminal finishes booting, saltboot redeployment formula setting is automa
 ====
 
 .Procedure: Forcing a Saltboot to Redeploy Image using Saltboot formula
-. Select the [guimenu]``Formulas`` tab for the system you want to redeploy
-. Select Saltboot formula
-. At the bottom check [guimenu]``Force image redeployment`` checkbox
-. Save the formula
-. Reboot the terminal to pick up the changes
+. Select the [guimenu]``Formulas`` tab for the system you want to redeploy.
+. Select Saltboot formula.
+. At the bottom check [guimenu]``Force image redeployment`` checkbox.
+. Save the formula.
+. Reboot the terminal to pick up the changes.
 
 If your terminal encounters a problem with the file system or the partition table, you might need to remove the partition table and reformat the terminal. Follow the procedure for image redeployment, but instead check [guimenu]``Force disk repartition`` checkbox.
