--- a/modules/retail/pages/saltboot-redeployment.adoc
+++ b/modules/retail/pages/saltboot-redeployment.adoc
@@ -97,7 +97,7 @@ Saving group formula on system level will cause data from group to be copied to 
 This has the side effect that changes on group level, like hardware type group formula, will not be visible on system level unless system level formula is unassigned from the system.
 ====
 
-[INFO]
+[NOTE]
 ====
 After terminal finishes booting, saltboot redeployment formula setting is automatically reset to prevent repeated redeployment.
 ====
