--- a/modules/retail/pages/saltboot-redeployment.adoc
+++ b/modules/retail/pages/saltboot-redeployment.adoc
@@ -109,4 +109,5 @@ After terminal finishes booting, saltboot redeployment formula setting is automa
 . Save the formula.
 . Reboot the terminal to pick up the changes.
 
-If your terminal encounters a problem with the file system or the partition table, you might need to remove the partition table and reformat the terminal. Follow the procedure for image redeployment, but instead check [guimenu]``Force disk repartition`` checkbox.
+If your terminal encounters a problem with the file system or the partition table, you might need to remove the partition table and reformat the terminal.
+Follow the procedure for image redeployment, but instead check [guimenu]``Force disk repartition`` checkbox.
