--- a/modules/retail/pages/saltboot-redeployment.adoc
+++ b/modules/retail/pages/saltboot-redeployment.adoc
@@ -3,7 +3,8 @@
 
 Usually systems provisioned by saltboot are redeployed or repartitioned automatically when new image is available or saltboot partitioning changes.
 
-Occasionally however it is needed to force saltboot to redeploy image or repartition disk even when automation would not do so. For these situations saltboot offers three ways to force redeployment or repartitioning:
+Occasionally however it is needed to force saltboot to redeploy image or repartition disk even when automation would not do so.
+For these situations saltboot offers three ways to force redeployment or repartitioning:
 
 * Force redeployment using salt grains
 * Force redeployment using custom info values
