--- a/modules/retail/pages/saltboot-redeployment.adoc
+++ b/modules/retail/pages/saltboot-redeployment.adoc
@@ -61,10 +61,10 @@ When created, it is available for repeated use.
 . Navigate to the [guimenu]``Overview`` page of the system you want to redeploy
 . Select tab [guimenu]``Custom Info``
 . Click on [guimenu]``Create Value``
-. From the list of available keys click on [guimenu]``saltboot_force_redeploy``
-. As [guimenu]``Value`` type [systemitem]``True``
-. Click [guimenu]``Update Key``
-. Reboot the terminal to pick up the changes
+. From the list of available keys click [guimenu]``saltboot_force_redeploy``.
+. As [guimenu]``Value`` type [systemitem]``True``.
+. Click [guimenu]``Update Key``.
+. Reboot the terminal to pick up the changes.
 
 [INFO]
 ====
