--- a/modules/retail/pages/saltboot-redeployment.adoc
+++ b/modules/retail/pages/saltboot-redeployment.adoc
@@ -1,7 +1,7 @@
 [[retail.deploy.force_redeployment]]
 = Force saltboot image redeployment
 
-Usually systems provisioned by saltboot are redeployed or repartitioned automatically when new image is available or saltboot partitioning changes.
+Systems provisioned by Saltboot are usually redeployed or repartitioned automatically when a new image is available or Saltboot partitioning changes.
 
 Occasionally however it is needed to force saltboot to redeploy image or repartition disk even when automation would not do so.
 For these situations saltboot offers three ways to force redeployment or repartitioning:
