--- a/modules/retail/pages/retail-deploy-terminals.adoc
+++ b/modules/retail/pages/retail-deploy-terminals.adoc
@@ -27,7 +27,7 @@ After you have registered new terminals, always check the {productname} {webui} 
 The terminals must not have directly connected to the {productname} Server by mistake.
 ====
 
-== Create A Hardware Type Group
+== Create a Hardware Type Group
 
 Each terminal requires a specific hardware type, which contains information about the product name and terminal manufacturer.
 However, at the beginning, the {productname} database does not have this information.
