--- a/modules/retail/pages/saltboot-redeployment.adoc
+++ b/modules/retail/pages/saltboot-redeployment.adoc
@@ -4,7 +4,7 @@
 Systems provisioned by Saltboot are usually redeployed or repartitioned automatically when a new image is available or Saltboot partitioning changes.
 
 Occasionally, however, it is needed to force Saltboot to redeploy an image or repartition disk even when automation would not do so.
-For these situations saltboot offers three ways to force redeployment or repartitioning:
+For these situations, Saltboot offers three ways to force redeployment or repartitioning:
 
 * Force redeployment using salt grains
 * Force redeployment using custom info values
