--- a/modules/retail/pages/saltboot-redeployment.adoc
+++ b/modules/retail/pages/saltboot-redeployment.adoc
@@ -15,7 +15,7 @@ For these situations, Saltboot offers three ways to force redeployment or repart
 Repartitioning of a terminal removes all data stored on the terminal hard disk, including any persistent partitions.
 ====
 
-== Force saltboot redeployment using salt grains
+== Force Saltboot redeployment using {salt} grains
 
 Saltboot redeployment grains have no side effects and does not require any further configuration.
 Limitation is that terminal must be accessible by [systeminfo]``salt``.
