--- a/modules/retail/pages/saltboot-redeployment.adoc
+++ b/modules/retail/pages/saltboot-redeployment.adoc
@@ -17,7 +17,7 @@ Repartitioning of a terminal removes all data stored on the terminal hard disk, 
 
 == Force Saltboot redeployment using {salt} grains
 
-Saltboot redeployment grains have no side effects and does not require any further configuration.
+Saltboot redeployment grains have no side effects and do not require any further configuration.
 Limitation is that terminal must be accessible by [systeminfo]``salt``.
 
 .Procedure: Forcing a Saltboot to Redeploy Image
