--- a/modules/retail/pages/saltboot-redeployment.adoc
+++ b/modules/retail/pages/saltboot-redeployment.adoc
@@ -18,7 +18,7 @@ Repartitioning of a terminal removes all data stored on the terminal hard disk, 
 == Force Saltboot redeployment using {salt} grains
 
 Saltboot redeployment grains have no side effects and do not require any further configuration.
-Limitation is that terminal must be accessible by [systeminfo]``salt``.
+The limitation is that terminal must be accessible by [systeminfo]``salt``.
 
 .Procedure: Forcing a Saltboot to Redeploy Image
 . On the {productname} Server, at the command prompt, as root, apply this Salt state:
