--- a/modules/retail/pages/saltboot-redeployment.adoc
+++ b/modules/retail/pages/saltboot-redeployment.adoc
@@ -21,7 +21,7 @@ Saltboot redeployment grains have no side effects and do not require any further
 The limitation is that terminal must be accessible by [systeminfo]``salt``.
 
 .Procedure: Forcing a Saltboot to Redeploy Image
-. On the {productname} Server, at the command prompt, as root, apply this Salt state:
+. On the {productname} Server, as root, apply this {salt} state at the command prompt:
 +
 ----
 salt $terminal_minion_id state.apply saltboot.force_redeploy
