--- a/modules/retail/pages/saltboot-redeployment.adoc
+++ b/modules/retail/pages/saltboot-redeployment.adoc
@@ -30,7 +30,7 @@ salt $terminal_minion_id state.apply saltboot.force_redeploy
 
 
 .Procedure: Forcing a Saltboot to Repartition the Hard Disk
-. On the {productname} Server, at the command prompt, as root, apply this Salt state:
+. On the {productname} Server, as root, apply this Salt state at the command prompt:
 +
 ----
 salt $terminal_minion_id state.apply saltboot.force_repartition
