--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -8,7 +8,7 @@ In the three major public cloud providers (AWS, GCP and Azure), SUSE:
 
 This document describes how to connect existing {payg} instance to {productname} server, and gives basic information about credentials collection from the instance.
 The goal of this connection is to extract authentication data so the {productname} Server can connect to a cloud RMT host. 
-This gives the {productname} server access to products that are on the RMT host that are not already available via the {scc} organization credentials.
+Then the {productname} Server has access to products on the RMT host that are not already available with the {scc} organization credentials.
 
 
 Before using {payg} feature make sure that: 
