--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -13,9 +13,9 @@ Then the {productname} Server has access to products on the RMT host that are no
 
 Before using {payg} feature make sure that: 
 
-* The {payg} instance is launched from the correct SUSE product image (e.g. SLES, SLES for SAP, SLE HPC) to allow access to the desired repositories
+* The {payg} instance is launched from the correct SUSE product image (for example, SLES, SLES for SAP, or SLE HPC) to allow access to the desired repositories
 
-* {productname} server has connectivity to the {payg} instance (ideally in the same region) either directly or via a bastion
+* {productname} Server has connectivity to the {payg} instance (ideally in the same region) either directly or via a bastion
 
 * A basic {scc} account is required. Enter your valid {scc} credentials in menu:Admin[Setup Wizard > Organization Credentials]. This account is required for accessing the {productname} client tools for boostrapping regardless of {payg} instances.
 
