--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -7,13 +7,20 @@ In the three major public cloud providers (AWS, GCP and Azure), SUSE:
 * operates per-region RMT Servers mirroring repositories for products available as {payg}
 
 This document describes how to connect existing {payg} instance to {productname} server, and gives basic information about credentials collection from the instance.
-The goal of the connection is to extract authentication data so {productname} server is able to connect to cloud RMT host.
+The goal of this connection is to extract authentication data so the {productname} Server can connect to a cloud RMT host. 
+Then the {productname} Server has access to products on the RMT host that are not already available with the {scc} organization credentials.
+
 
 Before using {payg} feature make sure that: 
 
-* the {payg} instance is launched from the correct SUSE product image (e.g. SLES, SLES for SAP, SLE HPC) to allow access to the desired repositories
-* {productname} server has connectivity to the {payg} instance (ideally in the same region) either directly or via a bastion
-* valid {scc} credentials are entered in menu:Admin[Setup Wizard > Organization Credentials], even they provide only limited access to products
+* The {payg} instance is launched from the correct SUSE product image (for example, SLES, SLES for SAP, or SLE HPC) to allow access to the desired repositories
+
+* {productname} Server has connectivity to the {payg} instance (ideally in the same region) either directly or via a bastion
+
+* A basic {scc} account is required. Enter your valid {scc} credentials in menu:Admin[Setup Wizard > Organization Credentials]. This account is required for accessing the {productname} client tools for boostrapping regardless of {payg} instances.
+
+* If you bootstrap the {payg} instance to SUSE Manager, SUSE Manager will disable its {payg} repositories then add repositories from where it mirrored the data from the RMT server. The final result will be {payg} instances acquiring the same repositories from the RMT servers but through the SUSE Manager server itself. Of course repositories can still be setup primarily from SCC.
+
 
 
 == Connecting {payg} instance
@@ -80,6 +87,13 @@ After the success message you can verify the newly added channels in the {webui}
 
 To monitor the syncing progress of each channel, check the log files in the [path]``/var/log/rhn/reposync`` directory on the {productname} Server.
 
+[IMPORTANT]
+====
+If a product is provided by both the {payg} instance and one of the {scc} subscriptions, it will appear only once in the products list.
+
+When the channels belonging to that product are synced, the data might still come from the SCC subscription, and not from the Pay-As-You-Go instance.
+====
+
 
 === Deleting the instance connection data
 
@@ -123,6 +137,14 @@ The error message only indicates that the instance is not available.
 Further diagnostics about the status of the instance needs to be done on the cloud provider. 
 ====
 
+[IMPORTANT]
+====
+Any of the following actions or changes in the {payg} instance will lead to credentials failing:
+* removing zypper credentials files
+* removing the imported certificates
+* removing cloud-specific entries from [path]``/etc/hosts``
+====
+
 
 == Registering {payg} system as a client
 
@@ -135,15 +157,6 @@ First set up the {payg} instance to collect authentication data, so it can synch
 The rest of the process is the same as for any non-public-cloud client and consists of synchronizing channels, automatic bootstrap script creation, activation key creation and starting the registration.
 
 For more about registering clients, see xref:client-configuration:registration-overview.adoc[].
-
-
-[IMPORTANT]
-====
-Any of the following actions or changes in the {payg} instance will lead to credentials stopping to work:
-* removing zypper credentials files
-* removing the imported certificates
-* removing cloud-specific entries from [path]``/etc/hosts``
-====
 
 
 == Troubleshooting 
