--- a/modules/client-configuration/pages/supported-features-sle-micro.adoc
+++ b/modules/client-configuration/pages/supported-features-sle-micro.adoc
@@ -232,7 +232,7 @@ The icons in this table indicate:
 | {cross}
 | {cross}
 
-| Monitored clients
+| Monitored clients {star}{star}
 | {salt}
 | {salt}
 | {salt}
@@ -288,3 +288,5 @@ In this table, virtual guest management is split into basic and advanced.
 Basic virtual guest management includes listing VMs, slow refresh, VM lifecycle actions (start, stop, resume, pause), and modifying VM vCPU and Memory.
 
 Advanced virtual guest management includes all features of Basic virtual guest management plus fast refresh, VM lifecycle actions (delete, reset, power off), modifying VM disk, network, graphical display, and graphical display configuration.
+
+{star}{star} On {micro}, only the Node exporter and the Blackbox exporter are available.
