Added new attribute for Saltboot.

--- a/modules/retail/pages/retail-saltboot-redeployment.adoc
+++ b/modules/retail/pages/retail-saltboot-redeployment.adoc
@@ -1,4 +1,4 @@
-[[retail.forced. saltboot.redeployment]]
+[[retail.forced.saltboot.redeployment]]
 = Forced saltboot image redeployment
 
 Systems provisioned by Saltboot are usually redeployed or repartitioned automatically when a new image is available or Saltboot partitioning changes.
@@ -6,15 +6,18 @@ Systems provisioned by Saltboot are usually redeployed or repartitioned automati
 Occasionally, however, it is needed to force Saltboot to redeploy an image or repartition disk even when automation would not do so.
 For these situations, Saltboot offers three ways to force redeployment or repartitioning:
 
-* Force redeployment using salt grains
-* Force redeployment using custom info values
-* Force redeployment using salt pillars
+* Force redeployment using salt grains <<force.redeployment.using.grains>>
+* Force redeployment using custom info values <<force.redeployment.using.custom.info>>
+* Force redeployment using salt pillars <<force.redeployment.using.formula>>
+
 
 [WARNING]
 ====
 Repartitioning of a terminal removes all data stored on the terminal hard disk, including any persistent partitions.
 ====
 
+
+[[force.redeployment.using.grains]]
 == Force Saltboot redeployment using {salt} grains
 
 Saltboot redeployment grains have no side effects and do not require any further configuration.
@@ -37,6 +40,8 @@ salt $terminal_minion_id state.apply saltboot.force_repartition
 ----
 . Restart the terminal to pick up the changes.
 
+
+[[force.redeployment.using.custom.info]]
 == Force saltboot redeployment using custom info values
 
 Saltboot custom values removes the limitation on terminal being reachable by [systemitem]``salt``, however there are configuration steps.
@@ -80,12 +85,21 @@ After terminal finishes booting, saltboot redeployment custom info setting is au
 
 [INFO]
 ====
-Creating [systemitem]``saltboot_force_repartition`` custom key is one time operation. Once created, it is available for repeated use.
+Creating [systemitem]``saltboot_force_repartition`` custom key is one time operation. 
+Once created, it is available for repeated use.
 ====
 
-.Procedure: Assign custom value for image redeployment
-. Follow the redeployment procedure, but select [guimenu]``saltboot_force_repartition`` key in step 4
+.Procedure: Assign custom value for disk repartitioning
+. Navigate to the [guimenu]``Overview`` page of the system you want to redeploy.
+. Select tab [guimenu]``Custom Info``.
+. Click on [guimenu]``Create Value``.
+. From the list of available keys click [guimenu]``saltboot_force_repartition``.
+. As [guimenu]``Value`` type [systemitem]``True``.
+. Click [guimenu]``Update Key``.
+. Reboot the terminal to pick up the changes.
 
+
+[[force.redeployment.using.formula]]
 == Force saltboot redeployment using saltboot formula
 
 Saltboot redeployment formula data has a significant side effect in terms of using [systemitem]``saltboot formula`` on the system level. This will probably mask further changes of [systemitem]``saltboot formula`` on group level unless formula is manually unassigned from the terminal.
@@ -111,4 +125,10 @@ After terminal finishes booting, saltboot redeployment formula setting is automa
 . Reboot the terminal to pick up the changes.
 
 If your terminal encounters a problem with the file system or the partition table, you might need to remove the partition table and reformat the terminal.
-Follow the procedure for image redeployment, but instead check [guimenu]``Force disk repartition`` checkbox.
+
+.Procedure: Forcing a {saltboot} to remove the partition table
+. Select the [guimenu]``Formulas`` tab for the system you want to redeploy.
+. Select {saltboot} formula.
+. At the bottom check [guimenu]``Force disk repartition`` checkbox.
+. Save the formula.
+. Reboot the terminal to pick up the changes.
