--- a/modules/retail/pages/retail-saltboot-redeployment.adoc
+++ b/modules/retail/pages/retail-saltboot-redeployment.adoc
@@ -1,15 +1,14 @@
 [[retail.forced.saltboot.redeployment]]
-= Forced saltboot image redeployment
+= Forced {saltboot} image redeployment
 
-Systems provisioned by Saltboot are usually redeployed or repartitioned automatically when a new image is available or Saltboot partitioning changes.
+Systems provisioned by {saltboot} are usually redeployed or repartitioned automatically when a new image is available or {saltboot} partitioning changes.
 
-Occasionally, however, it is needed to force Saltboot to redeploy an image or repartition disk even when automation would not do so.
-For these situations, Saltboot offers three ways to force redeployment or repartitioning:
+Occasionally, however, it is needed to force {saltboot} to redeploy an image or repartition disk even when automation would not do so.
+For these situations, {saltboot} offers three ways to force redeployment or repartitioning:
 
-* Force redeployment using salt grains <<force.redeployment.using.grains>>
-* Force redeployment using custom info values <<force.redeployment.using.custom.info>>
-* Force redeployment using salt pillars <<force.redeployment.using.formula>>
-
+* <<force.redeployment.using.grains>>
+* <<force.redeployment.using.custom.info>>
+* <<force.redeployment.using.formula>>
 
 [WARNING]
 ====
@@ -18,21 +17,22 @@ Repartitioning of a terminal removes all data stored on the terminal hard disk, 
 
 
 [[force.redeployment.using.grains]]
-== Force Saltboot redeployment using {salt} grains
+== Force {saltboot} redeployment using {salt} grains
 
-Saltboot redeployment grains have no side effects and do not require any further configuration.
+{saltboot} redeployment grains have no side effects and do not require any further configuration.
 The limitation is that terminal must be accessible by [systeminfo]``salt``.
 
-.Procedure: Forcing a Saltboot to Redeploy Image
+.Procedure: Forcing {saltboot} to redeploy image
 . On the {productname} Server, as root, apply this {salt} state at the command prompt:
 +
 ----
 salt $terminal_minion_id state.apply saltboot.force_redeploy
 ----
++
 . Restart the terminal to pick up the changes.
 
 
-.Procedure: Forcing a Saltboot to Repartition the Hard Disk
+.Procedure: Forcing a {saltboot} to Repartition the Hard Disk
 . On the {productname} Server, as root, apply this Salt state at the command prompt:
 +
 ----
@@ -42,9 +42,9 @@ salt $terminal_minion_id state.apply saltboot.force_repartition
 
 
 [[force.redeployment.using.custom.info]]
-== Force saltboot redeployment using custom info values
+== Force {saltboot} redeployment using custom info values
 
-Saltboot custom values removes the limitation on terminal being reachable by [systemitem]``salt``, however there are configuration steps.
+{saltboot} custom values removes the limitation on terminal being reachable by [systemitem]``salt``, however there are configuration steps.
 
 Custom Info keys and values can be also managed using API or [systemitem]``spacecmd`` command.
 For more information, see xref:reference:spacecmd/custominfo.adoc[].
@@ -53,7 +53,7 @@ For more information, see xref:reference:spacecmd/custominfo.adoc[].
 . In the {productname} {webui}, navigate to menu:Systems[Custom System Info].
 . Click [guimenu]``Create Key`` to create new [systemitem]``Custom Info Key``.
 . As [guimenu]``Key Label`` fill in [systemitem]``saltboot_force_redeploy``.
-. As [guimenu]``Description`` fill in [systemitem]``Force redeploy saltboot image``.
+. As [guimenu]``Description`` fill in [systemitem]``Force redeploy {saltboot} image``.
 . Click [guimenu]``Create Key``.
 
 [NOTE]
@@ -63,9 +63,9 @@ When created, it is available for repeated use.
 ====
 
 .Procedure: Assign custom value for image redeployment
-. Navigate to the [guimenu]``Overview`` page of the system you want to redeploy
-. Select tab [guimenu]``Custom Info``
-. Click on [guimenu]``Create Value``
+. Navigate to the [guimenu]``Overview`` page of the system you want to redeploy.
+. Select tab [guimenu]``Custom Info``.
+. Click on [guimenu]``Create Value``.
 . From the list of available keys click [guimenu]``saltboot_force_redeploy``.
 . As [guimenu]``Value`` type [systemitem]``True``.
 . Click [guimenu]``Update Key``.
@@ -73,15 +73,15 @@ When created, it is available for repeated use.
 
 [INFO]
 ====
-After terminal finishes booting, saltboot redeployment custom info setting is automatically reset to prevent repeated redeployment.
+After terminal finishes booting, {saltboot} redeployment custom info setting is automatically reset to prevent repeated redeployment.
 ====
 
 .Procedure: Create custom info key for disk repartitioning
-. Navigate to menu::Systems[Custom System Info] page
-. Click [guimenu]``Create Key`` to create new [systemitem]``Custom Info Key``
-. As [guimenu]``Key Label`` fill in [systemitem]``saltboot_force_repartition``
-. As [guimenu]``Description`` fill in `Force terminal disk repartition`
-. Click [guimenu]``Create Key``
+. Navigate to menu::Systems[Custom System Info] page.
+. Click [guimenu]``Create Key`` to create new [systemitem]``Custom Info Key``.
+. As [guimenu]``Key Label`` fill in [systemitem]``saltboot_force_repartition``.
+. As [guimenu]``Description`` fill in `Force terminal disk repartition`.
+. Click [guimenu]``Create Key``.
 
 [INFO]
 ====
@@ -100,13 +100,13 @@ Once created, it is available for repeated use.
 
 
 [[force.redeployment.using.formula]]
-== Force saltboot redeployment using saltboot formula
+== Force {saltboot} redeployment using {saltboot} formula
 
-Saltboot redeployment formula data has a significant side effect in terms of using [systemitem]``saltboot formula`` on the system level. This will probably mask further changes of [systemitem]``saltboot formula`` on group level unless formula is manually unassigned from the terminal.
+{saltboot} redeployment formula data has a significant side effect in terms of using [systemitem]``saltboot formula`` on the system level. This will probably mask further changes of [systemitem]``saltboot formula`` on group level unless formula is manually unassigned from the terminal.
 
 [WARNING]
 ====
-Usually saltboot formula is assigned to the hardware type group and data visible on system level are inherited from this group.
+Usually {saltboot} formula is assigned to the hardware type group and data visible on system level are inherited from this group.
 Saving group formula on system level will cause data from group to be copied to the system.
 
 This has the side effect that changes on group level, like hardware type group formula, will not be visible on system level unless system level formula is unassigned from the system.
@@ -114,12 +114,12 @@ This has the side effect that changes on group level, like hardware type group f
 
 [NOTE]
 ====
-After terminal finishes booting, saltboot redeployment formula setting is automatically reset to prevent repeated redeployment.
+After terminal finishes booting, {saltboot} redeployment formula setting is automatically reset to prevent repeated redeployment.
 ====
 
-.Procedure: Forcing a Saltboot to Redeploy Image using Saltboot formula
+.Procedure: Forcing a {saltboot} to redeploy image using {saltboot} formula
 . Select the [guimenu]``Formulas`` tab for the system you want to redeploy.
-. Select Saltboot formula.
+. Select {saltboot} formula.
 . At the bottom check [guimenu]``Force image redeployment`` checkbox.
 . Save the formula.
 . Reboot the terminal to pick up the changes.
