--- a/modules/installation-and-upgrade/pages/general-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/general-requirements.adoc
@@ -16,7 +16,7 @@ For a complete list of supported clients and features, see xref:client-configura
 
 [IMPORTANT]
 ====
-{productname} {productnumber} is based on SLES {sles-version} {sp-version} as the host operating system.
+{productname} {productnumber} is based on SLES {sles-version} {sp-base} as the host operating system.
 {productname} comes with a maintenance lifecycle of two years.
 For more information, see link:https://www.suse.com/lifecycle/[].
 
@@ -55,12 +55,12 @@ For more information about using SCC, see https://scc.suse.com/docs/help.
 ifeval::[{suma-content} == true]
 You only require a valid registration code for {productname}, for example from a "SUSE Manager Lifecycle Management+" subscription.
 For more information, see SUSE Terms and Conditions at https://www.suse.com/products/terms_and_conditions.pdf.
-You do not require a separate code for SLES{nbsp}{sles-version} {sp-version}.
+You do not require a separate code for SLES{nbsp}{sles-version} {sp-base}.
 endif::[]
 
 If not already done, download the {sle} {unifiedinstaller} from https://download.suse.com.
 
-Direct link to {sle} {sles-version} {sp-version}, required to install SUSE Manager https://www.suse.com/download/suse-manager.
+Direct link to {sle} {sles-version} {sp-base}, required to install SUSE Manager https://www.suse.com/download/suse-manager.
 
 For a later version or a different architecture, such as {ibmz}, select the respective item.
 With the {unifiedinstaller} you can install many SLE-based base products such as SLES, SLES for SAP Applications, or {susemgr}.
