--- a/modules/installation-and-upgrade/pages/proxy-registration.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-registration.adoc
@@ -26,7 +26,7 @@ This procedure describes software channel setup and registering the installed pr
 
 [IMPORTANT]
 ====
-Before you can select the correct child channels while creating the activation key, ensure you have completely downloaded the {productname} Proxy {productnumber} channel and all the recommended and mandatory {sle} {sles-version} Service pack version channels.
+Before you can select the correct child channels while creating the activation key, ensure you have completely downloaded the {productname} Proxy {productnumber} channel and all the recommended and mandatory {sle} {sles-version} {sp-base} channels.
 ====
 
 [[proxy-register-procedure]]
