--- a/modules/quickstart/pages/quickstart-install-suma-proxy.adoc
+++ b/modules/quickstart/pages/quickstart-install-suma-proxy.adoc
@@ -47,7 +47,7 @@ als, and click btn:[Next].
 
 [IMPORTANT]
 ====
-Before you can select the correct child channels while creating the activation key, ensure you have completely downloaded the {productname} Proxy {productnumber} channel and all the recommended and mandatory {sle} {sles-version} {sp-version} channels.
+Before you can select the correct child channels while creating the activation key, ensure you have completely downloaded the {productname} Proxy {productnumber} channel and all the recommended and mandatory {sle} {sles-version} {sp-base} channels.
 ====
 
 [[proxy-register-procedure]]
@@ -61,10 +61,10 @@ image::proxy-key.png[]
 
 . From the [guimenu]``Child Channels`` listing select the recommended channels by clicking the ``include recommended`` icon:
 +
-* SLE-Module-Basesystem15-SP5-Pool
-* SLE-Module-Basesystem15-SP5-Updates
-* SLE-Module-Server-Applications15-SP5-Pool
-* SLE-Module-Server-Applications15-SP5-Updates
+* SLE-Module-Basesystem15-SP4-Pool
+* SLE-Module-Basesystem15-SP4-Updates
+* SLE-Module-Server-Applications15-SP4-Pool
+* SLE-Module-Server-Applications15-SP4-Updates
 * SLE-Module-SUSE-Manager-Proxy-4.3-Pool
 * SLE-Module-SUSE-Manager-Proxy-4.3-Updates
 +
