--- a/modules/retail/pages/retail-saltboot-redeployment.adoc
+++ b/modules/retail/pages/retail-saltboot-redeployment.adoc
@@ -1,9 +1,9 @@
 [[retail.forced.saltboot.redeployment]]
 = Forced {saltboot} image redeployment
 
-Systems provisioned by {saltboot} are usually redeployed or repartitioned automatically when a new image is available or {saltboot} partitioning changes.
+Systems provisioned by {saltboot} are usually redeployed or repartitioned automatically when a new image is available, or {saltboot} partitioning changes.
 
-Occasionally, however, it is needed to force {saltboot} to redeploy an image or repartition disk even when automation would not do so.
+Occasionally, however, it is needed to force {saltboot} to redeploy an image or repartition disk, even when automation would not do so.
 For these situations, {saltboot} offers three ways to force redeployment or repartitioning:
 
 * <<force.redeployment.using.grains>>
@@ -19,7 +19,7 @@ Repartitioning of a terminal removes all data stored on the terminal hard disk, 
 [[force.redeployment.using.grains]]
 == Force {saltboot} redeployment using {salt} grains
 
-{saltboot} redeployment grains have no side effects and do not require any further configuration.
+{saltboot} redeployment grains have no side effects, and do not require any further configuration.
 The limitation is that terminal must be accessible by [systeminfo]``salt``.
 
 .Procedure: Forcing {saltboot} to redeploy image
@@ -32,7 +32,7 @@ salt $terminal_minion_id state.apply saltboot.force_redeploy
 . Restart the terminal to pick up the changes.
 
 
-.Procedure: Forcing a {saltboot} to Repartition the Hard Disk
+.Procedure: Forcing a {saltboot} to repartition the hard disk
 . On the {productname} Server, as root, apply this Salt state at the command prompt:
 +
 ----
@@ -44,9 +44,9 @@ salt $terminal_minion_id state.apply saltboot.force_repartition
 [[force.redeployment.using.custom.info]]
 == Force {saltboot} redeployment using custom info values
 
-{saltboot} custom values removes the limitation on terminal being reachable by [systemitem]``salt``, however there are configuration steps.
+{saltboot} custom values remove the limitation on terminal being reachable by [systemitem]``salt``, however there are configuration steps.
 
-Custom Info keys and values can be also managed using API or [systemitem]``spacecmd`` command.
+Custom info keys and values can be also managed using API or [systemitem]``spacecmd`` command.
 For more information, see xref:reference:spacecmd/custominfo.adoc[].
 
 .Procedure: Create custom info key for image redeployment
@@ -55,7 +55,7 @@ For more information, see xref:reference:spacecmd/custominfo.adoc[].
 . As [guimenu]``Key Label`` fill in [systemitem]``saltboot_force_redeploy``.
 . As [guimenu]``Description`` fill in [systemitem]``Force redeploy {saltboot} image``.
 . Click [guimenu]``Create Key``.
-
++
 [NOTE]
 ====
 Creating [systemitem]``saltboot_force_redeploy`` custom key is a one time operation.
@@ -71,7 +71,7 @@ When created, it is available for repeated use.
 . Click [guimenu]``Update Key``.
 . Reboot the terminal to pick up the changes.
 
-[INFO]
+[NOTE]
 ====
 After terminal finishes booting, {saltboot} redeployment custom info setting is automatically reset to prevent repeated redeployment.
 ====
@@ -82,8 +82,8 @@ After terminal finishes booting, {saltboot} redeployment custom info setting is 
 . As [guimenu]``Key Label`` fill in [systemitem]``saltboot_force_repartition``.
 . As [guimenu]``Description`` fill in `Force terminal disk repartition`.
 . Click [guimenu]``Create Key``.
-
-[INFO]
++
+[NOTE]
 ====
 Creating [systemitem]``saltboot_force_repartition`` custom key is one time operation. 
 Once created, it is available for repeated use.
@@ -102,11 +102,14 @@ Once created, it is available for repeated use.
 [[force.redeployment.using.formula]]
 == Force {saltboot} redeployment using {saltboot} formula
 
-{saltboot} redeployment formula data has a significant side effect in terms of using [systemitem]``saltboot formula`` on the system level. This will probably mask further changes of [systemitem]``saltboot formula`` on group level unless formula is manually unassigned from the terminal.
+{saltboot} redeployment formula data has a significant side effect in terms of using {saltboot} formula on the system level. 
+This will probably mask further changes of {saltboot} formula on group level unless formula is manually unassigned from the terminal.
 
 [WARNING]
 ====
-Usually {saltboot} formula is assigned to the hardware type group and data visible on system level are inherited from this group.
+{saltboot} formula is usually assigned to the hardware type group. 
+Data visible on system level are inherited from this group.
+
 Saving group formula on system level will cause data from group to be copied to the system.
 
 This has the side effect that changes on group level, like hardware type group formula, will not be visible on system level unless system level formula is unassigned from the system.
